# lsi-flash

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  hardware_compatibility.yml
.github/workflows/: ci.yml  release.yml
resources/: card-database.toml
src/: card_database.rs  error.rs  hcb.rs  lib.rs  main.rs  pci.rs
src/card/: mod.rs  mpt.rs  tests.rs
src/cli/: backup.rs  config.rs  detect.rs  erase.rs  flash.rs  fw.rs  mod.rs  recover.rs  region.rs  safety.rs  sbr.rs
src/firmware/: flash_layout.rs  inspect.rs  mod.rs  synthesize.rs  validate.rs
src/hw/: mod.rs  vfio.rs
src/mpi/: diag.rs  doorbell.rs  messages.rs  mmap_region.rs  mock_ioc.rs  mod.rs  real_ioc.rs  session.rs
src/mpt/: mod.rs  mpt3ctl.rs  transport.rs
src/sbr/: build.rs  i2c.rs  mod.rs  parse.rs  transport.rs
