[package]
name = "lsi-flash"
version = "0.0.1"
edition = "2021"
description = "Cross-flash LSI SAS2008-based HBAs (Dell PERC H200/H310, IBM M1015, LSI 9211-8i) between IT and IR firmware modes."
license = "MIT"
repository = "https://github.com/MattJackson/lsi-flash"
readme = "README.md"
rust-version = "1.74"

[dependencies]
thiserror = "1"
anyhow = "1"
libc = "0.2"

[profile.release]
lto = true
codegen-units = 1
strip = true
