[package]
name = "liblsi"
version = "0.0.1"
edition = "2021"
description = "Cross-flash LSI SAS2008-based HBAs (Dell PERC H200/H310, IBM M1015, LSI 9211-8i) between IT and IR firmware modes."
license = "MIT"
repository = "https://github.com/MattJackson/lsi-flash"
readme = "README.md"
rust-version = "1.74"

[lib]
name = "liblsi"
path = "src/lib.rs"

[[bin]]
name = "lsi-flash"
path = "src/bin/lsi-flash.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow = "1"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
toml = "1.1"
serde_json = "1"
bitflags = "2"
chrono = "0.4"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true

# HBA / IMR / RAID / NVData / DMA / etc. are domain terms across MPI 2.0,
# Broadcom datasheets, and Linux kernel headers — keeping them uppercase
# matches the references. Orchestrator state functions in cli/flash.rs
# legitimately take many parameters (phase + safety guards + flags).
[lints.clippy]
upper_case_acronyms = "allow"
too_many_arguments = "allow"
